--- a/basis_of_statistics/1.3.Types_of_variables.md
+++ b/basis_of_statistics/1.3.Types_of_variables.md
@@ -29,7 +29,7 @@
 
 Хорошим примером являются аналоговые и цифровые сигналы - у аналоговых сигналов допустимы различные значения в пределах интервала, а у цифровых сигналов значения "статичны".
 
-![Сигналы как примеры количественных переменных](images\signals.jpg)
+![Сигналы как примеры количественных переменных](images/signals.jpg)
 
 
 ## Качественные (номинативные) переменные
