modify link on image

--- a/basis_of_statistics/1.6.Quantilies.md
+++ b/basis_of_statistics/1.6.Quantilies.md
@@ -11,7 +11,7 @@
 
 Значение первого квартиля = 167. Значение третьего квартиля равно 173.
 
-![](imagex/quartilies.png)
+![](images/quartilies.png)
 
 Используя квартили можно легко описать наше распределение и построить график box-plot.
 
