modify link to useful site

--- a/basis_of_statistics/1.8.Central_limit_theorem.md
+++ b/basis_of_statistics/1.8.Central_limit_theorem.md
@@ -4,7 +4,7 @@
 
 Держа в уме это свойство нормального распределения, познакомимся с центральной предельной теоремой, которая лежит в основании идеи статистической проверки гипотез.
 
-Адрес использующегося в лекции сайта: [](https://gallery.shinyapps.io/CLT_mean/)
+Адрес использующегося в лекции сайта: [ссылка](https://gallery.shinyapps.io/CLT_mean/)
 
 Допустим, некоторый признак распределён нормально в генеральной совокупности и имеет среднее значение равное нулю и стандартное отклонение равное 15. 
 ![](images/source_distr.png)
