modify texts of lections - was deleted all grammar errors

--- a/basis_of_statistics/1.2.General_population.md
+++ b/basis_of_statistics/1.2.General_population.md
@@ -12,25 +12,20 @@
 
 ## Способы формирования выборки
 
-### Простая случайная выборка(simple random sample)
+### Простая случайная выборка (simple random sample)
 
 Мы случайным образом выбираем элементы генеральной совокупности для участия в нашем эксперименте или исследовании.
 
 При увеличении размера выборки она постепенно начинает напоминать генеральную совокупность по своим характеристикам.
 
-### Стратифицированная выборка(stratified sample)
+### Стратифицированная выборка (stratified sample)
 
-Её идея в том, что перед тем как извлекать случайным образом элементы генеральной совокупности мы сначала разобъём генеральную совокупность на несколько обособленных и различных по своей природе групп.
+Её идея в том, что перед тем как извлекать случайным образом элементы генеральной совокупности мы сначала разобьём генеральную совокупность на несколько обособленных и различных по своей природе групп.
 
-Например делим совокупность по признаку пола, а потом из каждой группы набираем элементы для участия в исследовании.
+Например, делим совокупность по признаку пола, а потом из каждой группы набираем элементы для участия в исследовании.
 
 ### Групповая выборка (cluster sample)
 
 Она напоминает предыдущий способ, но все кластеры будут очень сильно похожи между собой.
 
-Например, Санкт-Петербург можно разделить на несколько географических районов и быть уверенным, что численность их не сильно различается мжду собой. А затем можно выбрать только несколько кластеров для участия в нашем эксперименте, а потом из этих кластеров выбрать самым первым способом необходимые элементы.
-
-
-
-
-
+Например, Санкт-Петербург можно разделить на несколько географических районов и быть уверенным, что численность их не сильно различается между собой. А затем можно выбрать только несколько кластеров для участия в нашем эксперименте, а потом из этих кластеров выбрать самым первым способом необходимые элементы.
