--- a/basis_of_statistics/1.3.Types_of_variables.md
+++ b/basis_of_statistics/1.3.Types_of_variables.md
@@ -19,7 +19,7 @@
 
 ## Количественные переменные
 
-**Количественные переменные** - представляют обой измеренные значения некоторого признака.
+**Количественные переменные** - представляют собой измеренные значения некоторого признака.
 
 **Непрерывная переменная** может принимать абсолютно любые значения на некотором промежутке. Примером является рост человека на интервале от 160 до 190см (абсолютно любое значение из этого интервала).
 
@@ -36,20 +36,20 @@
 
 Такие переменные используются для разделения наших испытуемых или наблюдений на группы.
 
-Например, мы можем сказать, что все участники эксперимента женского пола будут обозначены цифрой 1, а все участники мужского пола - цифрой 2 оответственно.
+Например, мы можем сказать, что все участники эксперимента женского пола будут обозначены цифрой 1, а все участники мужского пола - цифрой 2 соответственно.
 
 Таким образом, в случае номинативных переменных за цифрами не стоит никакого математического смысла. В данном случае цифры используются как маркеры различных смысловых групп, в отличие от количественных переменных.
 
 
 ## Ранговые переменные
 
-Ещё один важный тип переменных это так называемые ранговые переменные.
+Ещё один важный тип переменных — это так называемые ранговые переменные.
 
 Представьте, что у нас есть информация о марафонском забеге: кто прибежал в каком порядке. Мы можем сказать, что испытуемый с рангом 1 быстрее, выше, сильнее испытуемого с рангом 5. Но вот насколько или во сколько он опережает этого испытуемого мы сказать не можем. Единственной возможной математической операцией является сравнение - кто быстрее, а кто медленнее.
 
 Можно проделать целый путь от количественной переменной к номинативной: 
 
-+ можно измерить рост испытуемых - это будет непрерывная количественная переменнная
-+ проранировать рост испытуемых - перевести их в ранговую переменную
++ можно измерить рост испытуемых - это будет непрерывная количественная переменная
++ проранжировать рост испытуемых - перевести их в ранговую переменную
 + разделить их на две группы: 1 - выше среднего, 2 - ниже среднего, т.е. делать номинативную переменную
 
