--- a/basis_of_statistics/1.5.Measures_of_variability.md
+++ b/basis_of_statistics/1.5.Measures_of_variability.md
@@ -8,7 +8,7 @@
 
 легко заметить, что эти два распределения отличаются скорее не по выраженности некоторого признака (среднее значение, мода и медиана будут приблизительно одинаковы в обоих случаях), а скорее по изменчивости данных.
 
-Как же нам рассчитать показатели, которые  будут характеризовать именно изменчивость исследуемого признака?
+Как же нам рассчитать показатели, которые будут характеризовать именно изменчивость исследуемого признака?
 
 
 ## Размах
@@ -27,7 +27,7 @@ Xmin = 157
 
 Данная мера имеет недостатки. Она рассчитывает изменчивость, учитывая только крайние значения, и любое изменение одного из них будет очень болезненно отражаться на итоговом результате.
 
-Достаточно вспомнить пример с добавлением одного очень сильно отличающегося от остальных значения признака.
+Достаточно вспомнить пример с добавлением одного очень сильно отличающегося от остальных значений признака.
 
 Размах изменится очень сильно.
 
@@ -36,7 +36,7 @@ Xmin = 157
 
 ## Дисперсия
 
-Как нам использовать все без исключения значения признака для рассчёта мер изменчивости?
+Как нам использовать все без исключения значения признака для расчёта мер изменчивости?
 
 Один из возможных вариантов - *посмотреть насколько в среднем наше значение отклоняется от среднего значения по выборке***.
 
@@ -48,7 +48,7 @@ Xmin = 157
 
 Среднее значение нашей выборки = 170,4.
 
-Поскольку все элементы выборки могут отклоняться от среднего значения на разные величины (большие и малые, положительные и отрицательные) усреднение и кадрат при расчёте диперсию дадут объективную картину.
+Поскольку все элементы выборки могут отклоняться от среднего значения на разные величины (большие и малые, положительные и отрицательные) усреднение и квадрат при расчёте дисперсии дадут объективную картину.
 
 ![](images/variance2.png)
 
@@ -66,7 +66,7 @@ Xmin = 157
 
 **SD** - среднеквадратичное отклонение выборки.
 
-**ВАЖНО: Формула дисперсии, указанная на рисунке выше применима для рассчёта на генеральной совокупности, для рассчёта дисперсии выборки нужно добавить минус 1 в знаменатель.**
+**ВАЖНО: Формула дисперсии, указанная на рисунке выше применима для расчёта на генеральной совокупности, для расчёта дисперсии выборки нужно добавить минус 1 в знаменатель.**
 
 Единица вычитается из-за степеней свободы (будет рассказано дальше).
 
@@ -77,7 +77,7 @@ Xmin = 157
 
 Пусть есть 7 наблюдений некоторого количественного признака.
 
-Ищем среднее, для каждого наблюдения ищем его отклонение от среднего (3), сложить эти отклоенения, разделить на число элементов минус 1.
+Ищем среднее, для каждого наблюдения ищем его отклонение от среднего (3), сложить эти отклонения, разделить на число элементов минус 1.
 
 D = (4 + 1 + 1 + 0 + 1 + 1 + 4) / (7 - 1) = 12 / 6 = 2
 
