--- a/basis_of_statistics/1.6.Quantilies.md
+++ b/basis_of_statistics/1.6.Quantilies.md
@@ -28,16 +28,16 @@
 
 Чем выше межквартильный размах, тем больше вариативность нашего признака.
 
-Отложим мысленно 1,5 межквартильного размаа вверх и вниз от 1-го и 3-го квартилей. Те значения признака, которые последними принадлежат этому промежутку и будут `границами усов`.
+Отложим мысленно 1,5 межквартильного размаха вверх и вниз от 1-го и 3-го квартилей. Те значения признака, которые последними принадлежат этому промежутку и будут `границами усов`.
 
 Точки, которые превосходят полтора межквартильного размаха - наносятся на график отдельно.
 
 ![](images/boxplot.png) 
 
-Давайте нанесём каждое значение нашего признака на график, чтобы посмотреть как box-plot соотносится с распределением наших данных.
+Давайте нанесём каждое значение нашего признака на график, чтобы посмотреть, как box-plot соотносится с распределением наших данных.
 
 50% всех наблюдений на промежутке между 1-м и 3-м квартилями.
 
-Этот тип графиков полезен в случаях когда нужно сравнить две группы между собой.
+Этот тип графиков полезен в случаях, когда нужно сравнить две группы между собой.
 
 ![](images/boxplot2.png)
