--- a/basis_of_statistics/1.7.Normal_distribution.md
+++ b/basis_of_statistics/1.7.Normal_distribution.md
@@ -1,6 +1,6 @@
 # Нормальное распределение
 
-Мы познакомились с основными описательными статистиками и теперь без трудам сможем охарактеризовать наши данные с точки зрения выраженности некоторого количественного признака, так и с тчоки зрения изменчивости нашей переменной.
+Мы познакомились с основными описательными статистиками и теперь без труда мы сможем охарактеризовать наши данные с точки зрения выраженности некоторого количественного признака, так и с точки зрения изменчивости нашей переменной.
 
 Для перехода к настоящей статистики нам нужно познакомиться с нормальным распределением. 
 
@@ -22,7 +22,7 @@
 
 Интересен тот факт, что в реальном мире большое количество характеристик и переменных подчиняется нормальному распределению.
 
-Причем интересно не то, что отклонение от среднего равновероятно как в большую, так и меньшую сторону, а то, что сохраняется вероятностное распределение. И этот вероятностный закон предоставляет множество возожностей для статистического анализа.
+Причем интересно не то, что отклонение от среднего равновероятно как в большую, так и меньшую сторону, а то, что сохраняется вероятностное распределение. И этот вероятностный закон предоставляет множество возможностей для статистического анализа.
 
 
 ## Z-стандартизация
@@ -47,7 +47,7 @@
 
 + теперь разделим полученное выражение на стандартное отклонение по нашей выборке
 
-Деление можно рассмотреть как умножение на число, обратное стандартному отклонению. 
+Деление можно рассмотреть, как умножение на число, обратное стандартному отклонению. 
 Если каждое значение умножить на число, то нужно и среднее умножить на это число, а дисперсию нужно умножить на квадрат этого числа.
 
 Но `(1 / стандартное отклонение) ** 2 = дисперсия`, а значит D * (1/D) = 1
@@ -69,7 +69,7 @@
 
 ![](images/raspr.png)
 
-Z-преобразование поволяет ответить на вопрос: какой процент наблюдений лежит в абсолютно любом интересующем нас диапазоне.
+Z-преобразование позволяет ответить на вопрос: какой процент наблюдений лежит в абсолютно любом интересующем нас диапазоне.
 
 Пусть:
 + среднее значение = 150
