added link to code

--- a/introduction_to_DS_and_ML/1.4.Pandas_and_dataframes.md
+++ b/introduction_to_DS_and_ML/1.4.Pandas_and_dataframes.md
@@ -29,10 +29,9 @@
 
 ## Работа с кодом  
 
-  
+Все манипуляции с pandas оформлены в виде [ноутбука в jupyter](https://github.com/dgokondra/stepik_pandas_notebooks.github.io/blob/master/pandas_first_part.ipynb).
 
 ## Полезные ссылки  
 
 + [О том как использовать Jupyter на все 100](https://www.youtube.com/watch?v=GYiqqLMEzp8)
 + [Более продвинутый доклад о том, как писать хороший код ﻿](https://www.youtube.com/watch?v=vZjm28HmqUY)
-
